change SortShell.py, .gitignore and add new tag

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# рабочая папка IDE
 .idea
+# Виртуальная среда
 .venv
+# Кеш питона
+**/_pycache_/
+# не доработанные файлы
+factorial.py
+main.py
+# Папка со скринами
+screenshots
